--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,8 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-webflux'
+	implementation 'org.springframework.boot:spring-boot-starter-actuator'
+
 	implementation 'io.kubernetes:client-java:10.0.0'
 
 	compileOnly 'org.projectlombok:lombok'
