--- a/k8s.yaml
+++ b/k8s.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: fint-core-exporter
+  name: fint-core-explorer
   annotations: {service.beta.kubernetes.io/azure-load-balancer-internal: 'true'}
 spec:
   selector:
-    app: fint-core-exporter
+    app: fint-core-explorer
   type: LoadBalancer
   ports:
     - {name: '8080', port: 8080}
@@ -13,20 +13,20 @@ spec:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: fint-core-exporter
+  name: fint-core-explorer
 spec:
   selector:
     matchLabels:
-      app: fint-core-exporter
+      app: fint-core-explorer
   template:
     metadata:
       labels:
-        app: fint-core-exporter
+        app: fint-core-explorer
     spec:
-      serviceAccountName: fint-core-exporter
+      serviceAccountName: fint-core-explorer
       containers:
-        - name: fint-core-exporter
-          image: fintlabsacr.azurecr.io/fint-core-exporter:build.${BUILD_NUMBER}_${GIT_COMMIT}
+        - name: fint-core-explorer
+          image: fintlabsacr.azurecr.io/fint-core-explorer:build.${BUILD_NUMBER}_${GIT_COMMIT}
           env:
             - { name: kubernetes.client, value: in-cluster }
           resources:
