--- a/k8s.yaml
+++ b/k8s.yaml
@@ -32,6 +32,8 @@ spec:
             - { name: kubernetes.namespace, value: default }
             - { name: kubernetes.connect-timeout, value: 15000 }
             - { name: kubernetes.read-timeout, value: 15000 }
+            - { name: kubernetes.initial-delay, value: 10000 }
+            - { name: kubernetes.fixed-delay, value: 600000 }
             - { name: TZ, value: Europe/Oslo }
           resources:
             limits:
