--- a/k8s.yaml
+++ b/k8s.yaml
@@ -34,6 +34,7 @@ spec:
             - { name: kubernetes.read-timeout, value: 15000 }
             - { name: kubernetes.initial-delay, value: 10000 }
             - { name: kubernetes.fixed-delay, value: 600000 }
+            - { name: management.endpoints.web.exposure.include, value: info, health, metrics, prometheus }
             - { name: TZ, value: Europe/Oslo }
           resources:
             limits:
