--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,8 @@ dependencies {
 
     implementation 'io.kubernetes:client-java:10.0.0'
 
+    implementation 'org.springdoc:springdoc-openapi-webflux-ui:1.5.5'
+
     implementation 'no.fint:fint-event-model:3.0.0'
 
     compileOnly 'org.projectlombok:lombok'
