--- a/k8s.yaml
+++ b/k8s.yaml
@@ -22,6 +22,10 @@ spec:
     metadata:
       labels:
         app: fint-core-explorer
+      annotations:
+        prometheus.io/scrape: "true"
+        prometheus.io/port: "8080"
+        prometheus.io/path: "actuator/prometheus"
     spec:
       serviceAccountName: fint-core-exporter
       containers:
