--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,7 @@ configurations {
 repositories {
     mavenCentral()
     maven {
-        url "http://dl.bintray.com/fint/maven"
+        url "https://repo.fintlabs.no/releases"
     }
 }
 
@@ -32,7 +32,7 @@ dependencies {
 
     implementation 'org.springdoc:springdoc-openapi-webflux-ui:1.5.5'
 
-    implementation 'no.fint:fint-event-model:3.0.0'
+    implementation 'no.fint:fint-event-model:3.0.1'
 
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
