FIN-52 #comment Upgraded spring boot, started refactoring and added more metrics #in-progress

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -5,3 +5,9 @@ kubernetes:
   read-timeout: 30000
   initial-delay: 10000
   fixed-delay: 300000
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "info, health, metrics, prometheus"
