--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -4,13 +4,11 @@ on:
     branches:
       - main
 
-# Environment variables available to all jobs and steps in this workflow
 env:
   REGISTRY_NAME: fintlabsacr
   CLUSTER_NAME: aks-beta-fint-2021-11-23
   CLUSTER_RESOURCE_GROUP: rg-aks-beta
   NAMESPACE: default
-  #SECRET: {secret-name}
   APP_NAME: fint-core-explorer
 
 jobs:
@@ -19,47 +17,30 @@ jobs:
     steps:
       - uses: actions/checkout@main
 
-      # Connect to Azure Container Registry (ACR)
-      - uses: azure/docker-login@v1
+      - name: Connect to Azure Container Registry (ACR)
+        uses: azure/docker-login@v1
         with:
           login-server: ${{ env.REGISTRY_NAME }}.azurecr.io
           username: ${{ secrets.REGISTRY_USERNAME }}
           password: ${{ secrets.REGISTRY_PASSWORD }}
 
-      # Container build and push to a Azure Container Registry (ACR)
-      - run: |
+      - name: Container build and push to a Azure Container Registry (ACR)
+        run: |
           docker build . -t ${{ env.REGISTRY_NAME }}.azurecr.io/${{ env.APP_NAME }}:${{ github.sha }}
           docker push ${{ env.REGISTRY_NAME }}.azurecr.io/${{ env.APP_NAME }}:${{ github.sha }}
-        #working-directory: ./
 
-      # Set the target Azure Kubernetes Service (AKS) cluster.
-      - uses: azure/aks-set-context@v1
+      - name: Set the target Azure Kubernetes Service (AKS) cluster.
+        uses: azure/aks-set-context@v1
         with:
           creds: '${{ secrets.AKS_BETA_FINT_GITHUB }}'
           cluster-name: ${{ env.CLUSTER_NAME }}
           resource-group: ${{ env.CLUSTER_RESOURCE_GROUP }}
 
-      # Create namespace if doesn't exist
-#      - run: |
-#          kubectl create namespace ${{ env.NAMESPACE }} --dry-run=client -o json | kubectl apply -f -
-
-      # Create image pull secret for ACR
-#      - uses: azure/k8s-create-secret@v1
-#        with:
-#          container-registry-url: ${{ env.REGISTRY_NAME }}.azurecr.io
-#          container-registry-username: ${{ secrets.REGISTRY_USERNAME }}
-#          container-registry-password: ${{ secrets.REGISTRY_PASSWORD }}
-#          secret-name: ${{ env.SECRET }}
-#          namespace: ${{ env.NAMESPACE }}
-#          arguments: --force true
-
-      # Deploy app to AKS
-      - uses: azure/k8s-deploy@v1
+      - name: Deploy to AKS
+        uses: azure/k8s-deploy@v1
         with:
           manifests: |
             k8s.yaml
           images: |
             ${{ env.REGISTRY_NAME }}.azurecr.io/${{ env.APP_NAME }}:${{ github.sha }}
-          #imagepullsecrets: |
-          #  ${{ env.SECRET }}
           namespace: ${{ env.NAMESPACE }}
